added link to table of summary use

--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -86,6 +86,8 @@ Examine overlap of the cultural uses of GDP, and the next chapter - hand in hand
 In discussion - refocus discussion on using mid level design construct first - then GDP and pattern collection as an example.
 Also work out what to move to Lit Review - and restructure LT and Methodology based on two chapters near completion.
 
+There is a table of simple results here.
+https://docs.google.com/document/d/12EmPhm8E_TE4rimvRdRf2wC5XRwT3EXO4cRZ99RNkTQ/edit
 
 ### Chapter outline
 
