--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -750,7 +750,77 @@ We can explore this behaviour from the child's perspective using terms from Acti
 the interaction also shows positive affect of child.
 her role in the community can be explored here. -->
 
-#### GDPs used to nurture tactical responses to errors and blockages
+
+
+#### Other examples of GDP driving adoption of technical processes
+
+References to such emerging practices driven by GDPs were present in many exchanges during directed playtesting and pair interactions. For example, after Ed gave feedback on the jump speed Mi's game, he continued by sharing a process to redundant space at the edges of design sprite characters.
+
+While this  is also a secondary example - more on digital design being driven by key features- it does intersect with the concepts of GDPs as they are used here to explain a technical concepts with a concrete example of experience.
+
+
+NOTE - COVERT TO TABLE -
+
+    Ed: for people with background like yours You can use the cramping tool.
+    Ed leads Molly to his workstation and involves his father in the process.
+    ...
+    Mark: In Piskel. You can crop it to the sprite  - cause it take that area too. (gestures – draws a large square with hands – then gestures to the edges). You approach an enemy if you’re close to it, it’ll trigger it.
+    Molly: ‘cause, sometimes you think how am I just sitting on this ledge here?
+    Mark: And you’re floating?
+    Molly: Yeah. Yeah that’s what’s happening. So..
+    Mark: So you can put you’re sprite back in again and you can crop it down.
+
+<!-- Mark: Show what? What are we doing?
+Ed: On this one it’s like this.
+Molly: Oh that’s good how did you do that?
+Ed: The cramping tool. (laughs nervously)
+Mark: The what?
+Ed: What… Is it cramping? (gestures with hands as scrunching / clutching motion)
+Mark: For doing what? What did we do? I don’t know what we’ve done.
+Ed: People have used the whole block.
+Mark: Oh yeah. We’ve just cropped it. So it’s got no border around it. So you don’t set things off when you get really close to them.
+Molly: Aaaah. I see yes. Cos the corners actually could have. (makes a small square gesture with fingers)
+ -->
+
+There are many other examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
+
+
+#### Use of evolving GDP terminology to facilitate design practices -
+
+NOTE - IS THERE ENOUGH HERE FOR A WHOLE SECTION? Is this cultural?
+NOTE - IT ADDRESSES EMERGING NORMS IN THE DESIGN
+
+**Language which has been introduced facilitator interventions is then modified and used organically through community interaction.**
+
+The following example shows a patchy but evolving use of some of the terminology that has been introduced partly by facilitator interventions and partly emerging organically through community interaction. As the community apopt the practices the become community norms.
+
+As background information on this pair, the mother's focus has been on creating graphics and has expressed pride in this her growing expertise in this area.
+
+The mother wants to export an image from the graphical editing tool and to import this into the game.
+
+    Molly: Right so I don't want this rocket here. I want the rocket to be the yellow thingie.
+    Nadine – Gold coins.
+    Molly - Right so, What are you doing? Do you know what you are doing?
+    I want the aliens to be the hazard, the rockets to be the gold coins and the spaceman to be the character.
+    Molly: Poop Ping? (alarmed) What are you doing? What's poop ping.
+    Where's my spaceman?
+    Ne: Wait! What do you want the aliens as?
+    Molly: The hazards.
+    Molly: Yaaay!
+    Molly: And now the rocket thing as the like you know the good thing - the reward.
+    Ne: Who wants a rocket for their reward?
+    Molly: Because if a spaceman gets to a rocket he can get home. But if he doesn't then the aliens get him.
+    Ne: It's a very violent game.
+    Molly: What?
+    Ne: It's a very violent game.
+
+The mother develops her proficiency of expressing GDP related concepts and language as this interaction develops. This may be to show her increased level of understanding and participation on overall process after being challenged by daughter about her use of technical language. "Do you even know what export means?". Nadine also appears to enjoy using the language and norms of game culture to tease her mother. "Who wants a rocket for their reward?" Here the daughter recognises the GDP of reward after used by her mother but questions the aesthetic choice and its appeal to game players.
+
+
+
+
+
+### GDPs used to nurture tactical responses to errors and blockages
 
 In critique of online tutorials researchers note  few provide common errors[@kim_pedagogical_2017]. This lack of problem solving techniques communicated in online tutorials may addressed through use of GDPs.
 
@@ -832,72 +902,6 @@ The experience of debugging appears to be a particular practice evoking certain 
 <!-- While the use of debugging tools and processes are often introduced to solve a particular problem in implementing one GDP. The same process is uses to solve issues that crop up while implementing other patterns. Throughout the recordings, some individuals show an evolution of problem solving knowledge and processes in relation to coding through their independent work.
 CAN i FIND ANY KEY EXAMPLES OF THIS?
 -->
-
-
-#### Other examples of GDP driving adoption of technical processes
-
-References to such emerging practices driven by GDPs were present in many exchanges during directed playtesting and pair interactions. For example, after Ed gave feedback on the jump speed Mi's game, he continued by sharing a process to redundant space at the edges of design sprite characters.
-
-While this  is also a secondary example - more on digital design being driven by key features- it does intersect with the concepts of GDPs as they are used here to explain a technical concepts with a concrete example of experience.
-
-
-NOTE - COVERT TO TABLE -
-
-
-    Ed: for people with background like yours You can use the cramping tool.
-    Ed leads Molly to his workstation and involves his father in the process.
-    ...
-    Mark: In Piskel. You can crop it to the sprite  - cause it take that area too. (gestures – draws a large square with hands – then gestures to the edges). You approach an enemy if you’re close to it, it’ll trigger it.
-    Molly: ‘cause, sometimes you think how am I just sitting on this ledge here?
-    Mark: And you’re floating?
-    Molly: Yeah. Yeah that’s what’s happening. So..
-    Mark: So you can put you’re sprite back in again and you can crop it down.
-
-<!-- Mark: Show what? What are we doing?
-Ed: On this one it’s like this.
-Molly: Oh that’s good how did you do that?
-Ed: The cramping tool. (laughs nervously)
-Mark: The what?
-Ed: What… Is it cramping? (gestures with hands as scrunching / clutching motion)
-Mark: For doing what? What did we do? I don’t know what we’ve done.
-Ed: People have used the whole block.
-Mark: Oh yeah. We’ve just cropped it. So it’s got no border around it. So you don’t set things off when you get really close to them.
-Molly: Aaaah. I see yes. Cos the corners actually could have. (makes a small square gesture with fingers)
- -->
-
-There are many other examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
-
-
-#### Use of evolving GDP terminology to facilitate design practices -
-
-NOTE - IS THERE ENOUGH HERE FOR A WHOLE SECTION? Is this cultural?
-NOTE - IT ADDRESSES EMERGING NORMS IN THE DESIGN
-
-**Language which has been introduced facilitator interventions is then modified and used organically through community interaction.**
-
-The following example shows a patchy but evolving use of some of the terminology that has been introduced partly by facilitator interventions and partly emerging organically through community interaction. As the community apopt the practices the become community norms.
-
-As background information on this pair, the mother's focus has been on creating graphics and has expressed pride in this her growing expertise in this area.
-
-The mother wants to export an image from the graphical editing tool and to import this into the game.
-
-    Molly: Right so I don't want this rocket here. I want the rocket to be the yellow thingie.
-    Nadine – Gold coins.
-    Molly - Right so, What are you doing? Do you know what you are doing?
-    I want the aliens to be the hazard, the rockets to be the gold coins and the spaceman to be the character.
-    Molly: Poop Ping? (alarmed) What are you doing? What's poop ping.
-    Where's my spaceman?
-    Ne: Wait! What do you want the aliens as?
-    Molly: The hazards.
-    Molly: Yaaay!
-    Molly: And now the rocket thing as the like you know the good thing - the reward.
-    Ne: Who wants a rocket for their reward?
-    Molly: Because if a spaceman gets to a rocket he can get home. But if he doesn't then the aliens get him.
-    Ne: It's a very violent game.
-    Molly: What?
-    Ne: It's a very violent game.
-
-The mother develops her proficiency of expressing GDP related concepts and language as this interaction develops. This may be to show her increased level of understanding and participation on overall process after being challenged by daughter about her use of technical language. "Do you even know what export means?". Nadine also appears to enjoy using the language and norms of game culture to tease her mother. "Who wants a rocket for their reward?" Here the daughter recognises the GDP of reward after used by her mother but questions the aesthetic choice and its appeal to game players.
 
 
 
